Added light theme (WIP), fixed loading bar issues for uploads and downloads